0.9.41 / 2019-06-xx
 * UPnP Fixes
 * Remove BOB

0.9.40 / 2019-05-10
 * Open local I2CP socket for 3rd party apps
 * Fix News URLs
 * Numerous bug fixes (see trac)

0.9.39 /
 * Set App ID

0.9.38 /

0.9.37 /

0.9.36 /

0.9.35 /

0.9.34 /

0.9.33 / 2018-02-18
 * Translation updates

0.9.32 / 2017-11-28
 * Fixed "Application Not Responding" error when restarting all tunnels
 * Fixed crashes when:
   * opening the console menu
   * starting the router
   * starting the router for the first time
   * viewing tunnels
   * viewing the addressbook
   * opening the addressbook menu
   * configuring addressbook subscriptions
   * using a configuration wizard
   * loading a B64 Destination from file
   * viewing tunnel settings
   * saving tunnel settings
   * installing a tunnel's recommended app without a market app
   * installing a browser without a market app
   * rotating the screen while using the built-in browser
 * Added a "sync" icon to more clearly indicate tunnel "starting" status
 * Updated Firefox browser config instructions for Firefox Quantum
 * Translation updates

0.9.31 / 2017-08-19
 * Fixed various crashes in the Tunnels UI
 * Updated Firefox browser config instructions
 * Minor bug fixes
 * Dependency and translation updates

0.9.30 / 2017-05-20
 * Fixed crashes when creating or deleting tunnels, or adding names to the
   private addressbook
 * Minor bug fixes
 * Dependency and translation updates

0.9.29 / 2017-03-27
 * Dependency and translation updates

0.9.28 / 2017-01-02
 * Bug fixes and translation updates

0.9.27 / 2016-11-20 / 64ff68efe98c345acb6ba1d0432fa49d1d650358
 * Removed kytv's IRC server from default tunnel list
 * Translation updates

0.9.26 / 2016-06-13 / b003272c8b504bb0d904edca2e95359a57c9a52c
 * Fixed "I2CP already listening" bug
 * Fixed crash when adding tunnel to empty list
 * Translation updates

0.9.25 / 2016-04-17 / 46d45a878a2b73394b26ca27dbe6c696dedcf1c3
 * Fixed a bug on Samsung Android 4.2 devices
 * Dependency improvements